--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" href="css/style.css">
  <title>Free-To-Play-Games</title>
 </head>
 
@@ -19,10 +18,8 @@
    </ul>
   </nav>
 
-
   <div class="b-content">
-   <img class="mySlides" src="./assets/images/image11.png" alt="Banner Photo" />
-
+   <img class="mySlides" src="./assets/images/image11.png" alt="Banner Photo">
    <img class="mySlides" src="./assets/images/image1.png" alt="Banner Photo" />
    <img class="mySlides" src="./assets/images/image2.png" alt="Banner Photo" />
    <img class="mySlides" src="./assets/images/image4.png" alt="Banner Photo" />
@@ -35,7 +32,7 @@
    <img class="mySlides" src="./assets/images/image15.png" alt="Banner Photo" />
    <img class="mySlides" src="./assets/images/image17.png" alt="Banner Photo" />
    <button class="b-button b-black b-display-right" onclick="plusDivs(1)">&#10095;</button>
-   <button class="b-button b-black b-display-left" onclick="plusDivs(-1)">&#10094;</button>
+   <button class="b-button b-black b-display-left" onclick="plusDivs(1)">&#10094;</button>
   </div>
  </header>
 
@@ -51,9 +48,6 @@
 
   </div>
  </main>
-
-
- <script src="./index.js"></script>
 
 </body>
 
