Add backend functionalities

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,12 @@
  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
  <title>Free-To-Play-Games</title>
- <script src="https://kit.fontawesome.com/e1fe8e6842.js" crossorigin="anonymous"></script>
+ <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
+ <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
+ <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+ <!-- <script src="https://kit.fontawesome.com/e1fe8e6842.js" crossorigin="anonymous"></script> -->
 </head>
 
 <body>
@@ -38,18 +43,23 @@
   </div>
  </header>
 
- <main id="game-cards">
-  <section class="cards-section">
+ <main>
+
+  <section id="cards" class="cards-section">
    <!--  <div class="card">
     <img src="./assets/images/image2.png" alt="" class="card-images" />
     <div class="content">
      <div class="name-div">
       <h2>Game Name</h2>
       <span class="likes"><i class="fas fa-heart fa-lg"></i></span>
-     </div>
-     <span class="number-of-likes">5 Likes</span>
-    </div>
-   </div> -->
+  </div>
+  <span class="number-of-likes">5 Likes</span>
+  </div>
+  </div> -->
+
+  </section>
+
+  <section class="comment-popup">
 
   </section>
  </main>
