--- a/src/index.html
+++ b/src/index.html
@@ -1,72 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Free-To-Play-Games</title>
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      rel="icon"
+      href="https://cdn-icons-png.flaticon.com/512/2991/2991606.png"
+    />
+  </head>
 
-<head>
- <meta charset="UTF-8" />
- <meta http-equiv="X-UA-Compatible" content="IE=edge" />
- <meta name="viewport" content="width=device-width, initial-scale=1.0" />
- <title>Free-To-Play-Games</title>
- <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
- <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet" />
- <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
- <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2991/2991606.png" />
-</head>
+  <body>
+    <header>
+      <nav class="navbar desktop-nav">
+        <ul class="menu-bar">
+          <li class="checker"><a href="#home">Home</a></li>
+          <li class="games">
+            <a href="#cards">Games(<span class="game-counter"></span>)</a>
+          </li>
+          <li class="contact"><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
 
-<body>
- <header>
-  <nav class="navbar desktop-nav">
-   <ul class="menu-bar">
-    <li class="checker"><a href="#home">Home</a></li>
-    <li class="games"><a href="#cards">Games(<span class="game-counter"></span>)</a></li>
-    <li class="contact"><a href="#contact">Contact</a></li>
-   </ul>
-  </nav>
+      <nav class="mobile-nav">
+        <div class="all-item">
+          <img class="logo" src="./assets/images/dice.svg" alt="Logo" />
+        </div>
+        <div class="mobile-item">
+          <div class="item close">
+            <a href="#" class="closeMenu"
+              ><i class="fa fa-times fa-3x" aria-hidden="true"></i
+            ></a>
+          </div>
+          <div class="mobile-nav-item">
+            <a href="#home" class="closeMenu">Home</a>
+          </div>
+          <div class="mobile-nav-item">
+            <a href="#cards" class="closeMenu"
+              >Games(<span class="game-counter"></span>)</a
+            >
+          </div>
+          <div class="mobile-nav-item">
+            <a href="#contact" class="closeMenu">Contact</a>
+          </div>
+        </div>
+        <div class="item menu">
+          <a href="#" class="openMenu"
+            ><i class="fa fa-bars" aria-hidden="true"></i
+          ></a>
+        </div>
+      </nav>
 
-  <nav class="mobile-nav">
-   <div class="all-item">
-    <img class="logo" src="./assets/images/dice.svg" alt="Logo">
-   </div>
-   <div class="mobile-item">
-    <div class="item close"><a href="#" class="closeMenu"><i class="fa fa-times fa-3x" aria-hidden="true"></i></a></div>
-    <div class="mobile-nav-item"><a href="#home" class="closeMenu">Home</a></div>
-    <div class="mobile-nav-item"><a href="#cards" class="closeMenu">Games(<span class="game-counter"></span>)</a></div>
-    <div class="mobile-nav-item"><a href="#contact" class="closeMenu">Contact</a></div>
-   </div>
-   <div class="item menu"><a href="#" class="openMenu"><i class="fa fa-bars" aria-hidden="true"></i></a></div>
-  </nav>
+      <div class="b-content">
+        <!--this-->
+        <img
+          class="mySlides"
+          src="./assets/images/image1.png"
+          alt="Banner Photo"
+        />
+        <img
+          class="mySlides"
+          src="./assets/images/image2.png"
+          alt="Banner Photo"
+        />
+        <img
+          class="mySlides"
+          src="./assets/images/image4.png"
+          alt="Banner Photo"
+        />
+        <img
+          class="mySlides"
+          src="./assets/images/image5.png"
+          alt="Banner Photo"
+        />
+        <img
+          class="mySlides"
+          src="./assets/images/image6.png"
+          alt="Banner Photo"
+        />
+        <img
+          class="mySlides"
+          src="./assets/images/image8.png"
+          alt="Banner Photo"
+        />
+        <img
+          class="mySlides"
+          src="./assets/images/nfs.png"
+          alt="Banner Photo"
+        />
+        <img
+          class="mySlides"
+          src="./assets/images/batman7.png"
+          alt="Banner Photo"
+        />
+        <img
+          class="mySlides"
+          src="./assets/images/image13.png"
+          alt="Banner Photo"
+        />
+        <img
+          class="mySlides"
+          src="./assets/images/image15.png"
+          alt="Banner Photo"
+        />
+        <img
+          class="mySlides"
+          src="./assets/images/image17.png"
+          alt="Banner Photo"
+        />
 
-  <div class="b-content">
-   <!--this-->
-   <img class="mySlides" src="./assets/images/image1.png" alt="Banner Photo" />
-   <img class="mySlides" src="./assets/images/image2.png" alt="Banner Photo" />
-   <img class="mySlides" src="./assets/images/image4.png" alt="Banner Photo" />
-   <img class="mySlides" src="./assets/images/image5.png" alt="Banner Photo" />
-   <img class="mySlides" src="./assets/images/image6.png" alt="Banner Photo" />
-   <img class="mySlides" src="./assets/images/image8.png" alt="Banner Photo" />
-   <img class="mySlides" src="./assets/images/nfs.png" alt="Banner Photo" />
-   <img class="mySlides" src="./assets/images/batman7.png" alt="Banner Photo" />
-   <img class="mySlides" src="./assets/images/image13.png" alt="Banner Photo" />
-   <img class="mySlides" src="./assets/images/image15.png" alt="Banner Photo" />
-   <img class="mySlides" src="./assets/images/image17.png" alt="Banner Photo" />
+        <button class="b-button b-black b-display-left" type="button">
+          &#10094;
+        </button>
+        <button class="b-button b-black b-display-right" type="button">
+          &#10095;
+        </button>
+      </div>
+    </header>
 
-   <button class="b-button b-black b-display-left">&#10094;</button>
-   <button class="b-button b-black b-display-right">&#10095;</button>
-  </div>
+    <main>
+      <section id="cards" class="cards-section"></section>
 
-
- </header>
-
- <main>
-  <section id="cards" class="cards-section"></section>
-
-  <section class="comment-popup"></section>
- </main>
- <footer>
-  <p>
-   Created by
-   <a href="https://github.com/virag-ky" target="_blank">Virag Kormoczy</a> &
-   <a href="https://github.com/SaidRasinlic" target="_blank">Said Rasinlic</a
+      <section class="comment-popup"></section>
+    </main>
+    <footer>
+      <p>
+        Created by
+        <a
+          href="https://github.com/virag-ky"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Virag Kormoczy</a
+        >
+        &
+        <a
+          href="https://github.com/SaidRasinlic"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Said Rasinlic</a
         >
       </p>
     </footer>
